@startuml

title __AREA's Class Diagram__\n

  namespace princess.connect {
    namespace area {
      class princess.connect.area.Area1 {
          + Area1()
      }
    }
  }
  

  namespace princess.connect {
    namespace area {
      class princess.connect.area.Area1.Level1 {
          + Level1()
      }
    }
  }
  

  namespace princess.connect {
    namespace area {
      class princess.connect.area.Area1.Level10 {
          + Level10()
      }
    }
  }
  

  namespace princess.connect {
    namespace area {
      class princess.connect.area.Area1.Level2 {
          + Level2()
      }
    }
  }
  

  namespace princess.connect {
    namespace area {
      class princess.connect.area.Area1.Level3 {
          + Level3()
      }
    }
  }
  

  namespace princess.connect {
    namespace area {
      class princess.connect.area.Area1.Level4 {
          + Level4()
      }
    }
  }
  

  namespace princess.connect {
    namespace area {
      class princess.connect.area.Area1.Level5 {
          + Level5()
      }
    }
  }
  

  namespace princess.connect {
    namespace area {
      class princess.connect.area.Area1.Level6 {
          + Level6()
      }
    }
  }
  

  namespace princess.connect {
    namespace area {
      class princess.connect.area.Area1.Level7 {
          + Level7()
      }
    }
  }
  

  namespace princess.connect {
    namespace area {
      class princess.connect.area.Area1.Level8 {
          + Level8()
      }
    }
  }
  

  namespace princess.connect {
    namespace area {
      class princess.connect.area.Area1.Level9 {
          + Level9()
      }
    }
  }
  

  princess.connect.area.Area1 -up-|> princess.connect.baseClass.Area
  princess.connect.area.Area1 +-down- princess.connect.area.Area1.Level1
  princess.connect.area.Area1 +-down- princess.connect.area.Area1.Level10
  princess.connect.area.Area1 +-down- princess.connect.area.Area1.Level2
  princess.connect.area.Area1 +-down- princess.connect.area.Area1.Level3
  princess.connect.area.Area1 +-down- princess.connect.area.Area1.Level4
  princess.connect.area.Area1 +-down- princess.connect.area.Area1.Level5
  princess.connect.area.Area1 +-down- princess.connect.area.Area1.Level6
  princess.connect.area.Area1 +-down- princess.connect.area.Area1.Level7
  princess.connect.area.Area1 +-down- princess.connect.area.Area1.Level8
  princess.connect.area.Area1 +-down- princess.connect.area.Area1.Level9
  princess.connect.area.Area1.Level1 -up-|> princess.connect.baseClass.Area.AreaLevel
  princess.connect.area.Area1.Level10 -up-|> princess.connect.baseClass.Area.AreaLevel
  princess.connect.area.Area1.Level2 -up-|> princess.connect.baseClass.Area.AreaLevel
  princess.connect.area.Area1.Level3 -up-|> princess.connect.baseClass.Area.AreaLevel
  princess.connect.area.Area1.Level4 -up-|> princess.connect.baseClass.Area.AreaLevel
  princess.connect.area.Area1.Level5 -up-|> princess.connect.baseClass.Area.AreaLevel
  princess.connect.area.Area1.Level6 -up-|> princess.connect.baseClass.Area.AreaLevel
  princess.connect.area.Area1.Level7 -up-|> princess.connect.baseClass.Area.AreaLevel
  princess.connect.area.Area1.Level8 -up-|> princess.connect.baseClass.Area.AreaLevel
  princess.connect.area.Area1.Level9 -up-|> princess.connect.baseClass.Area.AreaLevel


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
